change the TextView in all activity from Enter the amount to Enter the <the unite convert name>

--- a/app/src/main/res/layout/activity_speed.xml
+++ b/app/src/main/res/layout/activity_speed.xml
@@ -51,7 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:text="Enter the amount"
+            android:text="Enter the Speed"
             android:textColor="#ffffff"
 
             android:textSize="20dp"
